# astra

./: .gitignore  CITATION.cff  LICENSE  README.md  data-requirements.txt  get_encoder.py  get_ztf_data.py  plot_loss.py  pyproject.toml  requirements.txt  setup.py  train-requirements.txt  train_astromer.py
astra/bands/: bands.py
astra/src/: classifier.py  dataset.py  embedding.py  encoder.py  finetuning.py  header.py  loss.py  preprocessing.py  scheduler.py  transformer.py
astra/utils/: helper.py  labels.py  resample_data.py  test.py
config/: clustering-loss.yaml  contrastive-loss.yaml  contrastive-loss_embeddings.yaml  contrastive-loss_finetuning.yaml  contrastive-loss_siamese.yaml  contrastive-loss_triplet.yaml  dino.yaml  downstream_task.yaml  k_distil-loss_embeddings.yaml  k_distil-loss_finetuning.yaml  k_distil.yaml
core/: astromer.py  data.py  encoder.py  losses.py  masking.py  output.py  scheduler.py  tboard.py  utils.py
core/.ipynb_checkpoints/: data-checkpoint.py
dart/bands/: bands.py
dart/src/: dataset.py  embedding.py  encoder.py  header.py  loss.py  preprocessing.py  transformer.py
dart/utils/: helper.py
notebooks/: Train_SwAV_10_epochs.ipynb  astra-multi-gpu.ipynb  aug_data.ipynb  check_parallel_jobs.ipynb  cross-matched-cephids.ipynb  gen_data.ipynb  multi-gpu.ipynb  new_data.ipynb  preprocess.ipynb  test_data_gen.ipynb
notebooks/hats/: README.md  _load-with-lsdb.ipynb  _load-with-nested-pandas.ipynb  hats_reimport.py  import-vizier.ipynb
notebooks/misc/: astra-multi-gpu.ipynb  gen_data.ipynb
notebooks/plots/: astra-clr_data_aug.ipynb  astra-clr_plot-metric.ipynb  astra-clr_plot-umap.ipynb
scripts/: apply_finetuning.py  classification.py  downstream_task.py  finetuning.py  generate_data.py  get_embeddings.py  keras_to_onnx.py  test.py  train_model.py  train_transformer.py  visualize_embeddings.py
