[build-system]
requires = ["setuptools", "wheel"]  # Specifies the build system requirements
build-backend = "setuptools.build_meta" # Specifies the build backend

[project]
name = "astra" # Project name
version = "1.0.0" 
# dynamic = ["dependencies"]


authors = [
  { name = "Your Name", email = "your_email@example.com" }, # Author information
]

description = "A short description of your package" # Short description
readme = "README.md" # Long description location.  Assumes you have a README.md
requires-python = ">=3.11"  # Minimum Python version supported

# Classifiers from your setup.py
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", #Added a placeholder, please check
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = 'https://your-package-url.com' # Project URL

[project.scripts]
astra-data = "scripts.generate_data:main" # Entry point for astra-data
astra-net = "scripts.train_model:main" # Entry point for astra-transformer
astra-embeddings = "scripts.get_embeddings:main" # Entry for astra-embeddings
astra-downstream = "scripts.downstream_task:main" # Entry for astra-downstream
astra-finetuning = "scripts.apply_finetuning:main" # Entry for astra-downstream

# [project.optional-dependencies]
# gpu = [
#    "tensorflow[and-cuda]; sys_platform == 'linux'"
# ]

[tool.setuptools]
packages = ["astra", "scripts"] 

# [tool.setuptools.dynamic]
# dependencies = {file = "requirements.txt"} # Dynamic dependencies from requirements.txt



